# Sentinal_AI

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
examples/: sample_audit_log.jsonl  sample_query_allowed.json  sample_query_blocked.json
policies/: hipaa.json
sentinel_ai/: __init__.py  audit.py  config.py  detector.py  gate.py  main.py  memory.py  prime.py  redact.py  router.py  scenarios.py
static/: index.html
tests/: __init__.py  test_detector.py  test_e2e.py  test_gate.py  test_router.py
