[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-ai"
version = "1.0.0"
description = "Compliance infrastructure for AI agents. Powered by Prime, the compliance gate agent."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Sentinel AI Team"},
]
keywords = ["compliance", "hipaa", "phi", "ai-safety", "llm", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.11.0",
    "python-dotenv>=1.1.0",
    "httpx>=0.28.0",
    "regex>=2024.11.0",
    "groq>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "httpx>=0.28.0",
]
memory = [
    "hindsight-sdk>=0.1.0",
]
routing = [
    "cascadeflow>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/sentinel-ai/sentinel-ai"
Documentation = "https://github.com/sentinel-ai/sentinel-ai#readme"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
include = ["sentinel_ai*"]
